crates/reinhardt-core/crates/macros/tests/ui/path/pass/simple_pattern.rs
// Test: Simple URL pattern without parameters

use reinhardt_macros::path;

fn main() {
    let pattern = path!("polls/");
    assert_eq!(pattern, "polls/");
}
