crates/reinhardt-core/crates/macros/tests/ui/path/fail/empty_parameter.rs
// Test: URL pattern with empty parameter should fail

use reinhardt_macros::path;

fn main() {
    let pattern = path!("polls/{}/");
}
